--- a/src/main/java/com/gmasoftware/sellersystem/user/CreateUserForm.form
+++ b/src/main/java/com/gmasoftware/sellersystem/user/CreateUserForm.form
@@ -36,9 +36,9 @@
                   <Component id="permissionLevelTitle" alignment="0" max="32767" attributes="0"/>
                   <Component id="permissionLevelInput" max="32767" attributes="0"/>
                   <Component id="createUserButton" max="32767" attributes="0"/>
-                  <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jLabel1" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="100" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -65,7 +65,7 @@
               <Component id="passwordInput1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="createUserButton" min="-2" pref="36" max="-2" attributes="0"/>
-              <EmptySpace pref="45" max="32767" attributes="0"/>
+              <EmptySpace pref="41" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -76,7 +76,8 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Ubuntu" size="22" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="CREATE NEW USER"/>
+        <Property name="horizontalAlignment" type="int" value="0"/>
+        <Property name="text" type="java.lang.String" value="CREAR USUARIO"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="usernameInput">
@@ -87,7 +88,7 @@
     <Component class="javax.swing.JLabel" name="usernameTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Ubuntu Light" size="15" style="0"/>
+          <Font name="Ubuntu" size="16" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Nombre de usuario"/>
       </Properties>
@@ -95,7 +96,7 @@
     <Component class="javax.swing.JLabel" name="passwordTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Ubuntu Light" size="15" style="0"/>
+          <Font name="Ubuntu" size="16" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Contrase&#xf1;a"/>
       </Properties>
@@ -105,7 +106,7 @@
     <Component class="javax.swing.JLabel" name="passwordTitle1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Ubuntu Light" size="15" style="0"/>
+          <Font name="Ubuntu" size="16" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Repetir contrase&#xf1;a"/>
       </Properties>
@@ -115,7 +116,7 @@
     <Component class="javax.swing.JLabel" name="permissionLevelTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Ubuntu Light" size="15" style="0"/>
+          <Font name="Ubuntu" size="16" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Nivel de permisos"/>
       </Properties>
@@ -126,7 +127,7 @@
           <StringArray count="3">
             <StringItem index="0" value="Administrador"/>
             <StringItem index="1" value="Gestor de Stock"/>
-            <StringItem index="2" value="Gestor de ventas"/>
+            <StringItem index="2" value="Gestor de Ventas"/>
           </StringArray>
         </Property>
       </Properties>
