--- a/src/main/java/com/gmasoftware/sellersystem/user/EditUserForm.form
+++ b/src/main/java/com/gmasoftware/sellersystem/user/EditUserForm.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="title" type="java.lang.String" value="Create User"/>
+    <Property name="title" type="java.lang.String" value="Edit User"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -27,6 +27,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="jLabel2" max="32767" attributes="0"/>
                   <Component id="usernameInput" max="32767" attributes="0"/>
                   <Component id="usernameTitle" max="32767" attributes="0"/>
                   <Component id="passwordTitle" alignment="0" max="32767" attributes="0"/>
@@ -34,12 +35,10 @@
                   <Component id="passwordTitle1" alignment="0" max="32767" attributes="0"/>
                   <Component id="passwordInput1" alignment="0" max="32767" attributes="0"/>
                   <Component id="permissionLevelTitle" alignment="0" max="32767" attributes="0"/>
-                  <Component id="permissionLevelInput" max="32767" attributes="0"/>
+                  <Component id="permissionLevelInput" pref="207" max="32767" attributes="0"/>
                   <Component id="saveButton" max="32767" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="frameTitle" max="32767" attributes="0"/>
+                  <Component id="jLabel3" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
           </Group>
@@ -49,7 +48,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <Component id="frameTitle" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="usernameTitle" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -60,7 +59,11 @@
               <Component id="permissionLevelInput" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="passwordTitle" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Component id="passwordInput" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="passwordTitle1" min="-2" max="-2" attributes="0"/>
@@ -68,18 +71,19 @@
               <Component id="passwordInput1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="saveButton" min="-2" pref="36" max="-2" attributes="0"/>
-              <EmptySpace pref="45" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="frameTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Ubuntu" size="22" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="EDIT USER"/>
+        <Property name="horizontalAlignment" type="int" value="0"/>
+        <Property name="text" type="java.lang.String" value="EDITAR USUARIO"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="usernameInput">
@@ -90,7 +94,7 @@
     <Component class="javax.swing.JLabel" name="usernameTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Ubuntu Light" size="15" style="0"/>
+          <Font name="Ubuntu" size="16" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Nombre de usuario"/>
       </Properties>
@@ -98,9 +102,9 @@
     <Component class="javax.swing.JLabel" name="passwordTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Ubuntu Light" size="15" style="0"/>
+          <Font name="Ubuntu" size="16" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Contrase&#xf1;a"/>
+        <Property name="text" type="java.lang.String" value="Nueva contrase&#xf1;a"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JPasswordField" name="passwordInput">
@@ -108,7 +112,7 @@
     <Component class="javax.swing.JLabel" name="passwordTitle1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Ubuntu Light" size="15" style="0"/>
+          <Font name="Ubuntu" size="16" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Repetir contrase&#xf1;a"/>
       </Properties>
@@ -118,7 +122,7 @@
     <Component class="javax.swing.JLabel" name="permissionLevelTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Ubuntu Light" size="15" style="0"/>
+          <Font name="Ubuntu" size="16" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Nivel de permisos"/>
       </Properties>
@@ -129,7 +133,7 @@
           <StringArray count="3">
             <StringItem index="0" value="Administrador"/>
             <StringItem index="1" value="Gestor de Stock"/>
-            <StringItem index="2" value="Gestor de ventas"/>
+            <StringItem index="2" value="Gestor de Ventas"/>
           </StringArray>
         </Property>
       </Properties>
@@ -147,6 +151,28 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="saveButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel2">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Ubuntu" size="13" style="0"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="2" green="2" red="e9" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Dejar en blanco para mantener"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel3">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Ubuntu" size="13" style="0"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="2" green="2" red="e9" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="la contrase&#xf1;a anterior."/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
